Opened 14 years ago
Closed 14 years ago
#6886 closed bug (fixed)
Screenshot app won't let you save images anywhere but 'Home'
Reported by: | kallisti5 | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Screenshot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
GCC4 Hybrid hrev39403
- take a screenshot
- change "save in" to 'choose folder'
- choose a folder other then home
- press ok
- 'save in' goes back to saying "Home folder"
Change History (3)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Will deal with it later after work, unless someone beats me to it.
Note:
See TracTickets
for help on using tickets.
That makes perfect sense, since ScreenshotWindow's MessageReceived() isn't actually catching/processing the panel's B_REFS_RECEIVED message at all.