Screenshot

* Consider the message that the FilePanel returns and add the path to the output destination MenuField.

Ticket #6886


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40826 a95241bf-73f2-0310-859d-f6bbb57e9c96